# fsmtp-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD  build.sh  dbs.cql  main.cpp  readme.md  temp.txt  test.cql  test.smtp  tt.txt
.github/: FUNDING.yml
docs/: algorithms.md
keys/ssl/: pp.txt
src/: email.src.cpp  email.src.hpp  logger.src.cpp  logger.src.hpp  pre.hpp  queued-email.src.cpp  queued-email.src.hpp  user.src.cpp  user.src.hpp
src/db/: cassandra.src.cpp  cassandra.src.hpp  mime-helpers.src.cpp  mime-helpers.src.hpp
src/debug/: timer.src.hpp
src/ds-api/: server.src.cpp  server.src.hpp
src/flib/: strings.cpp  strings.hpp
src/gui-gtk/: main-window.src.cpp  main-window.src.hpp
src/mailer/: commands.src.cpp  commands.src.hpp  mailer.src.cpp  mailer.src.hpp  pre.hpp  resolver.src.cpp  resolver.src.hpp  socket-handler.cpp  socket-handler.hpp
src/mailer/dkim/: dkim.src.cpp  dkim.src.hpp  parsers.src.cpp
src/mailer/dkim/canonicalization/: relaxed.src.cpp
src/mailer/dkim/openssl/: rsa-sha256.src.cpp  sha256.src.cpp
src/mailer/mime-composer/: generators.src.cpp  generators.src.hpp  mime-composer.src.cpp  mime-composer.src.hpp
src/ossl/: ossl.src.hpp  rsa-sha256.src.cpp  sha256.src.cpp
src/parsers/: mail-parser.src.cpp  mail-parser.src.hpp  mime-parser.src.cpp  mime-parser.src.hpp
src/sender/: sender.src.cpp  sender.src.hpp
src/server/: commands.src.cpp  commands.src.hpp  parse-message.src.cpp  parse-message.src.hpp  responses.src.hpp  server.src.cpp  server.src.hpp
src/server/modules/: esmtp-auth.src.cpp  esmtp-auth.src.hpp  esmtp.src.cpp  esmtp.src.hpp
src/types/: mime.src.hpp
templates/email/: footer.html  fsmtp-relay.html
web/public/: index.html
web/public/static/: default.css  index.css
